# UN-Hackathon-Child-Wind-Risk-Intelligence-System

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_wind.nc
config/: settings.py
data/: downloader.py  validator.py
logic/: exposure.py  hospital_access.py  school_density.py  wind_handler.py
ui/: map_display.py  sidebar.py
utils/: cleanup.py
