[project]
name = "un-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cdsapi>=0.7.4",
    "fiona==1.9.6",
    "folium==0.16.0",
    "geopandas==0.14.3",
    "leafmap==0.29.0",
    "matplotlib==3.8.4",
    "netcdf4==1.6.5",
    "numpy==1.26.4",
    "osmnx>=1.9.4",
    "pandas==2.2.2",
    "pyproj==3.6.1",
    "rasterio==1.3.9",
    "rasterstats==0.19.0",
    "requests==2.32.2",
    "rioxarray==0.15.1",
    "rtree==1.2.0",
    "scikit-learn==1.5.0",
    "shapely==2.0.3",
    "streamlit==1.35.0",
    "xarray==2024.3.0",
]
